# NetworkProgrammingTermProject

./: CMakeLists.txt  Csv.h  ErrorHandler.h  FileUtil.h  GarbageImage.qrc  beverage.cpp  beverage.h  consumer.cpp  consumer.h  linkedlist.h  main.cpp  manager.cpp  manager.h  money.cpp  money.h  vendingmachine.cpp  vendingmachine.h
QML/: BeverageArea.qml  BeverageManagerArea.qml  BeverageOutputBlock.qml  GarbageArea.qml  GarbageOutputBlock.qml  GarbageRemainedCost.qml  HaveMoneyArea.qml  InputCoin.qml  InputMoneyText.qml  InputPaperMoney.qml  Main.qml  ManagerTableView.qml  MoneyDialog.qml  OutputMoneyArea.qml  PromotionBlock.qml  RevenuePeriodView.qml  SalesCheckWindow.qml
json/: beverage_data.json  consumer_data.json  vm_money_data.json
